@@ -752,6 +752,10 @@ calling 'eldoc-message' directly.
 generating warnings for a decade.  To interpret old-style backquotes
 as new-style, bind the new variable 'force-new-style-backquotes' to t.
 
+** Defining a Common Lisp structure using 'cl-defstruct' or
+'cl-struct-define' whose name clashes with a builtin type (e.g.,
+'integer' or 'hash-table') now signals an error.
+
 
 * Editing Changes in Emacs 26.1
 
